<resources>
    <string name="app_name_dips" translatable="false">DiPS361</string>
    <string name="welcometext" translatable="false">Selamat Datang\ndi DiPS361</string>
    <string name="desc_welcome" translatable="false">Aplikasi Virtual Customer Support\nMudah, aman dan nyaman</string>
    <string name="wink" translatable="false">Kedipkan mata\nuntuk menangkap gambar.</string>
    <string name="msg_error" translatable="false">Terjadi Kesalahan</string>
    <string name="not_using_dips" translatable="false">Maaf Anda Tidak Bisa Menggunakan Layanan DiPS361</string>
    <string name="tutup" translatable="false">Tutup</string>
    <string name="chat" translatable="false">Pesan</string>
    <string name="confirm_accept" translatable="false">Demi kenyamanan bersama, percakapan ini akan terekam secara otomatis.\nApakah Anda setuju untuk menggunakan Layanan Digital Operations Bank Victoria?</string>
    <string name="tidak_not" translatable="false">Tidak</string>
    <string name="setuju_accept" translatable="false">Setuju</string>
    <string name="leave_message" translatable="false">Apakah Anda yakin ingin mengakhiri panggilan?</string>
    <string name="cancel" translatable="false">Batal</string>
    <string name="leave_leave_text" translatable="false">Tinggalkan Sesi</string>
    <string name="call_is_being_connected" translatable="false">Panggilan terhubung</string>
    <string name="call_is_being_connected1" translatable="false">Panggilan terhubung .</string>
    <string name="call_is_being_connected2" translatable="false">Panggilan terhubung . .</string>
    <string name="call_is_being_connected3" translatable="false">Panggilan terhubung . . .</string>
    <string name="schedule_a_task" translatable="false">Jadwalkan Panggilan</string>
    <string name="schedule_a_taskln" translatable="false">Jadwalkan\nPanggilan</string>
    <string name="end_call" translatable="false">Akhiri</string>
    <string name="end_call2" translatable="false">Akhiri Panggilan</string>
    <string name="end_callln" translatable="false">Akhiri\nPanggilan</string>
    <string name="headline_schedule" translatable="false">saat ini seluruh petugas kami belum dapat menjawab panggilan Anda, mohon jadwalkan waktu terbaik bagi kami untuk menghubungi Anda kembali.</string>
    <string name="day_date_schedule" translatable="false"><![CDATA[Hari & Tanggal]]></string>
    <string name="time" translatable="false">Waktu</string>
    <string name="notif_blank" translatable="false">Data belum diisi</string>
    <string name="no" translatable="false">Tidak</string>
    <string name="headline_endcall" translatable="false">Apakah Anda ingin mengakhiri panggilan ?</string>
    <string name="headline_waiting" translatable="false">Saat ini seluruh petugas kami sedang melayani transaksi nasabah lain. Mohon untuk menunggu beberapa saat.</string>
    <string name="headline_waiting2" translatable="false">Saat ini seluruh petugas kami sedang melayani transaksi nasabah lain.</string>
    <string name="waiting" translatable="false">Bersedia menunggu</string>
    <string name="waitingln" translatable="false">Bersedia\nMenunggu</string>
    <string name="headline_success" translatable="false">Customer Support sudah siap melayani Anda.</string>
    <string name="btn_continue" translatable="false">Lanjut</string>
    <string name="back" translatable="false">Kembali</string>
    <string name="name" translatable="false">Nama Lengkap</string>
    <string name="nik" translatable="false">NIK</string>
    <string name="enter_your_message" translatable="false">Masukkan pesan Anda</string>
    <string name="product_list" translatable="false">Daftar Produk</string>
    <string name="mutual_funds" translatable="false">Reksa Dana</string>
    <string name="insurance" translatable="false">Asuransi</string>
    <string name="deposito" translatable="false">Deposito</string>
    <string name="giro" translatable="false">Giro</string>
    <string name="savings" translatable="false">Tabungan</string>
    <string name="terms_condition2" translatable="false"><![CDATA[Syarat dan Ketentuan]]></string>
    <string name="checkbox_tnc" translatable="false">Saya menyetujui syarat dan ketentuan</string>
    <string name="tnc_content" translatable="false">Syarat dan Ketentuan Umum PT Bank XYZ mengatur mengenai hubungan hukum antara PT XYZ dengan individu/korporasi yang menggunakan jasa/layanan PT Bank XYZ yang merupakan calon atau pemilik rekening di PT Bank XYZ sehubungan dengan segala produk, fasilitas dan/atau layanan yang tersedia bagi nasabah. Berikut ini merupakan poin - poin yang perlu diperhatikan sebelum melakukan pendaftaran ataupun transaksi.\n\n<ol><li><![CDATA[Hanya untuk nasabah perorangan Warga Negara Indonesia dan tidak berlaku Rekening Join]]></li>\n\n<li><![CDATA[Setoran awal pembukaan rekening Rp 20.000,-]]></li>\n\n<li><![CDATA[Setoran tunai selanjutnya Rp 10.000,-]]></li>\n\n<li><![CDATA[Saldo minimum rekening Rp 20.000,-]]></li>\n\n<li><![CDATA[Biaya apabila rekening tidak aktif Rp 2.000,- per bulan]]></li>\n\n<li><![CDATA[Apabila saldo rekening kurang dari Rp 20.000,- maka rekening akan ditutup secara otomatis oleh sistem]]></li>\n\n<li><![CDATA[Biaya penutupan rekening Rp 20.000,-]]></li>\n\n<li><![CDATA[Jumlah minimum penarikan di teller Rp 100.000,- kecuali pada saat nasabah ingin tutup rekening]]></li></ol></string>
    <string name="Photo_ktp" translatable="false">Foto eKTP</string>
    <string name="Photo_nktp" translatable="false">Foto\neKTP</string>
    <string name="photo_nnpwp" translatable="false">Foto\nNPWP</string>
    <string name="foto_ntanda_ntangan" translatable="false">Foto\nTanda\nTangan</string>
    <string name="formulir_npembukaan_nrekening" translatable="false">Formulir\nPembukaan\nRekening</string>
    <string name="info_first_data" translatable="false">Informasi\nData\nUtama</string>
    <string name="info_first_data2" translatable="false">Informasi\nData Utama</string>
    <string name="data_account_open" translatable="false">Data Rekening\nYang Akan\nDibuka</string>
    <string name="facilities_services" translatable="false">Fasilitas\nLayanan</string>
    <string name="statement" translatable="false">Pernyataan</string>
    <string name="pastikan_gambar_atau_foto_ktp_sudah_jelas_dan_tidak_buram" translatable="false">Pastikan gambar atau foto\njelas dan tidak buram.</string>
    <string name="pilih_dari_galeri" translatable="false">Pilih Dari Galeri</string>
    <string name="content_after_schedule" translatable="false">Terima kasih telah menggunakan layanan Digital Operations Bank Victoria. Panggilan Anda sudah terjadwalkan. Kami akan segera menghubungi Anda</string>
    <string name="done" translatable="false">Selesai</string>
    <string name="address" translatable="false">Alamat</string>
    <string name="religion" translatable="false">Agama</string>
    <string name="process" translatable="false">Proses</string>
    <string name="headline_rating" translatable="false">Terima kasih telah mempercayakan\n transaksi perbankan Anda pada\n Bank Victoria.</string>
    <string name="apakah_permasalahan_anda_n_selesai_dengan_baik" translatable="false">Apakah agen bank melayani Anda dengan baik?</string>
    <string name="send" translatable="false">kirim</string>
    <string name="nama" translatable="false">Nama</string>
    <string name="selesai" translatable="false">Selesai</string>
    <string name="content_otp" translatable="false">Masukan One Time Password (OTP) untuk verifikasi data Anda. Kode OTP telah dikirim ke +62812 3456 7XXX</string>
    <string name="kirim_ulang_kode_otp" translatable="false">Kirim ulang kode OTP</string>
    <string name="rating_pop_up_content" translatable="false">Terima kasih atas penilaian Anda. Penilaian Anda sangat berharga bagi kami.</string>
    <string name="produk_layanan" translatable="false"><![CDATA[Layanan]]></string>
    <string name="verifikasi" translatable="false">Verifikasi</string>
    <string name="Formulir_Transfer" translatable="false">Formulir Transfer</string>
    <string name="FOREX" translatable="false">Transaksi Valas</string>
    <string name="Amount" translatable="false">Nominal Transaksi</string>
    <string name="pilih_bahasa" translatable="false">Bahasa / Language</string>
    <string name="lan_id" translatable="false">Indonesia</string>
    <string name="lan_en" translatable="false">English</string>
    <string name="select_language" translatable="false">Silakan pilih Bahasa terlebih dahulu</string>
    <string name="portofolio_saya" translatable="false">Portofolio Saya</string>
    <string name="lanjut_next" translatable="false">Lanjut / Next</string>
    <string name="atau" translatable="false">atau</string>
    <string name="hapus" translatable="false">Hapus</string>
    <string name="source_account" translatable="false">Rekening Sumber Dana</string>
    <string name="no_formulir" translatable="false">No. Formulir</string>
    <string name="jenis_layanan" translatable="false">Jenis Layanan</string>
    <string name="antrian_saya" translatable="false">(Nomor Anda)</string>
    <string name="antrian_sekarang" translatable="false">(Saat ini)</string>
    <string name="mata_uang" translatable="false">Rp</string>
    <string name="please_wait" translatable="false">Harap Menunggu</string>
    <string name="please_wait1" translatable="false">Harap Menunggu .</string>
    <string name="please_wait2" translatable="false">Harap Menunggu . .</string>
    <string name="please_wait3" translatable="false">Harap Menunggu . . .</string>
    <string name="ocr_title" translatable="false">Apakah data anda sudah sesuai ?</string>
    <string name="ttl" translatable="false">Tempat Lahir</string>
    <string name="ttl2" translatable="false">Tgl Lahir</string>
    <string name="transaksi_anda_berhasil" translatable="false">Transaksi Anda Berhasil</string>
    <string name="resi" translatable="false">Resi</string>
    <string name="perorangan" translatable="false">Perorangan</string>
    <string name="INTERBANK_TRANSACTION" translatable="false">Transfer Antar Bank</string>
    <string name="KYC_UPDATING" translatable="false">Perbarui Data</string>
    <string name="CUSTOMER_COMPLAIN" translatable="false">Pengaduan Nasabah</string>
    <string name="DORMANT_ACTIVATION" translatable="false">Aktivasi Dormant</string>
    <string name="error_field" translatable="false">Kolom masih kosong</string>
    <string name="error_image" translatable="false">Silahkan upload foto anda</string>
    <string name="alertRTGS" translatable="false">harus diisi/dipilih pada Formulir</string>
    <string name="incoming_call" translatable="false">Panggilan masuk</string>
    <string name="incoming_call1" translatable="false">Panggilan masuk .</string>
    <string name="incoming_call2" translatable="false">Panggilan masuk . .</string>
    <string name="incoming_call3" translatable="false">Panggilan masuk . . .</string>
    <string name="warn_not_use_app" translatable="false">Maaf Anda tidak dapat menggunakan layanan Digital Operations Bank XYZ</string>
    <string name="warn_hub_calcenter" translatable="false">Untuk info lebih lanjut silakan menghubungi Call Center Bank XYZ</string>
    <string name="exit" translatable="false">Keluar</string>
    <string name="call_center" translatable="false">Call Center</string>
    <string name="transaction" translatable="false">Transaksi</string>
    <string name="connect_to_agent" translatable="false">Hubungkan dengan Agen sekarang</string>
    <string name="connect" translatable="false">Hubungkan</string>
    <string name="or" translatable="false">atau</string>
    <string name="auto_connect_agent" translatable="false">Otomatis menghubungkan dengan Agen</string>
    <string name="second" translatable="false">detik</string>
    <string name="dalam_pengerjaan" translatable="false">DALAM PENGERJAAN</string>
    <string name="under_construction" translatable="false">Halaman ini sedang dalam pengerjaan.</string>
</resources>