<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pilih_bahasa"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="#EDEDF4"/>

    <RadioGroup
        android:id="@+id/groupradio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:textSize="14dp"
            android:id="@+id/rbId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lan_id"
            android:textStyle="bold"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:textSize="14dp"
            android:id="@+id/rbEn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lan_en"
            android:textStyle="bold"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <Button
        android:textSize="14dp"
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lanjut_next"
        android:textColor="@color/white"
        android:background="@drawable/oval_background_10dp"
        android:backgroundTint="@color/Blue"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10"/>

</LinearLayout>