<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warn_not_use_app"
            android:textColor="@color/black"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvBody2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/warn_hub_calcenter"
            android:textColor="@color/black"
            android:gravity="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/btnCallCenter"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:background="@drawable/oval_background_10dp"
                android:text="@string/call_center"
                android:backgroundTint="@color/zm_button"
                android:textColor="@color/white"
                android:textSize="12dp" />
            <Button
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/exit"
                android:background="@drawable/oval_background_10dp"
                android:backgroundTint="@color/zm_button"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>