<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:text="@string/ocr_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nik"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="15dp" />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <EditText
                android:padding="9dp"
                android:id="@+id/et_nik_ocr"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/bg_textinput"
                android:inputType="number"
                android:textSize="12dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="15dp" />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <EditText
                android:padding="9dp"
                android:id="@+id/et_name_ocr"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/bg_textinput"
                android:inputType="text"
                android:textSize="12dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ttl"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="15dp" />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <EditText
                android:padding="9dp"
                android:id="@+id/et_ttl_ocr"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/bg_textinput"
                android:inputType="text"
                android:textSize="12dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ttl2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="15dp" />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <EditText
                android:padding="9dp"
                android:id="@+id/et_ttl2_ocr"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/bg_textinput"
                android:inputType="text"
                android:textSize="12dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:textSize="14dp"
                android:id="@+id/btncncl"
                android:layout_marginEnd="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:background="@drawable/oval_background_10dp"
                android:backgroundTint="@color/button_end_call"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:textSize="14dp"
                android:id="@+id/btnlnjt"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/oval_background_10dp"
                android:backgroundTint="@color/Blue"
                android:clickable="false"
                android:text="@string/btn_continue"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>
