<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.frag_maintenance"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/TopBar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_back4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/tvtitleHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="6dp"
                android:text="@string/transaction"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvMaintenance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26dp"
            android:textColor="@color/zm_text"
            android:textStyle="bold"
            android:text="@string/dalam_pengerjaan"
            android:layout_above="@id/tvSubMsg"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/tvSubMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:text="@string/under_construction"
            android:textColor="@color/zm_text"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/imgMaintenance"
            android:layout_marginBottom="@dimen/dp_20"/>
        <ImageView
            android:id="@+id/imgMaintenance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/dalampengerjaan"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

</FrameLayout>