<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DipsCameraSource">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="90dp">
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_gravity="center">
          <SurfaceView
              android:id="@+id/mySurface"
              android:layout_width="match_parent"
              android:layout_height="match_parent"/>

          <SurfaceView
              android:id="@+id/transSurface"
              android:layout_width="match_parent"
              android:layout_height="match_parent" />
      </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/head_background"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:textStyle="bold"
            tools:text="@string/welcometext" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="14dp"
            tools:text="@string/desc_welcome" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/oval_background"
        android:layout_below="@id/llHeader"
        android:layout_marginTop="30dp">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/wink"
          android:textAlignment="center"
          android:textColor="@color/black"
          android:textSize="12dp"
          android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>